Corrected layout issues caused by refactoring menu.

--- a/css/app.less
+++ b/css/app.less
@@ -263,6 +263,8 @@ textarea, .CodeMirror, .CodeMirror-hints {
 }
 
 .refactor-menu {
+  top: 0;
+  left: 0;
   font-size: 90%;
   position: absolute;
   background-color: #fff;
